
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int create_objects (int ) ;

int main(int argc, char** argv) {

  for (size_t i = 0; i < 100; i++) {
    create_objects(0);
  }

}
