; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/GC/extr_gc_c.c_main.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/GC/extr_gc_c.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %12, %2
  %8 = load i64, i64* %6, align 8
  %9 = icmp ult i64 %8, 100
  br i1 %9, label %10, label %15

10:                                               ; preds = %7
  %11 = call i32 @create_objects(i32 0)
  br label %12

12:                                               ; preds = %10
  %13 = load i64, i64* %6, align 8
  %14 = add i64 %13, 1
  store i64 %14, i64* %6, align 8
  br label %7

15:                                               ; preds = %7
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @create_objects(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
